<resources>
    <string name="app_name">United Poultry</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="login_e1">Email or User Name</string>
    <string name="login_e2">Password</string>
    <string name="login_c1">Remember Me</string>
    <string name="login_t1">Forgot Password?</string>
    <string name="login_b1">Login</string>
    <string name="login_t2">OR</string>
    <string name="login_b2">Continue with google</string>
    <string name="login_t3">Don\'t have an account?</string>
    <string name="login_t4"><u>Sign Up</u></string>
    <string name="signup_title">Create an account</string>
    <string name="signup_e1">Email</string>
    <string name="signup_e2">First name</string>
    <string name="signup_e3">Last name</string>
    <string name="signup_e4">confirm password</string>
    <string name="signup_b1">Sign Up</string>
    <string name="signup_t1">Already have an account?</string>
    <string name="signup_t2">Login</string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="forgot_password_t1">Don’t worry! It happens. Please enter the email or phone associated with your account</string>
    <string name="forgot_password_t2">Email or Phone</string>
    <string name="forgot_password_b1">Send OTP</string>
    <string name="forgot_password_t3">Remember Password?</string>
    <string name="forgot_password_t4">Sign In</string>
    <string name="verification_code_title">Verification Code</string>
    <string name="verification_code_t1">Email Verification</string>
    <string name="verification_code_t2">Enter the OTP code here</string>
    <string name="verification_code_b1">Verify and Proceed</string>
    <string name="verification_code_t3">Don’t receive the OTP?</string>
    <string name="verification_code_t4">Resend OTP</string>
    <string name="otp_verified_t1">Congratulations!</string>
    <string name="otp_verified_t2">Your Verification is complete</string>
    <string name="otp_verified_b1">Let’s Get Started</string>
    <string name="daily_rate_title">Good Morning</string>
    <string name="daily_rate_t1">Set Today’s Rate</string>
    <string name="daily_rate_t2">Enter rate per box of eggs</string>
    <string name="daily_rate_t3">Rate per box (PKR)</string>
    <string name="daily_rate_t4">This rate will be applied to all sales today. Client discounts will be calculated based on this rate.</string>
    <string name="daily_rate_t5">Yesterday’s Rate</string>
    <string name="daily_rate_b1">Start My Day</string>
    <string name="first_t1">Experience Fast and Reliable Delivery</string>
    <string name="first_t2">Hassle-free pickup and delivery, right to your destination</string>
    <string name="second_t1">Flexible Payment</string>
    <string name="second_t2">Different modes of payment either before and after delivery without stress</string>
    <string name="third_t1">Real Time Tracking</string>
    <string name="third_t2">Track your pakages/items from the comfort of your home till final destination</string>
    <string name="forth_t2">LETS GET</string>
    <string name="forth_t3">Choose how you want to continue</string>
    <string name="forth_t6">Login as Rider</string>
    <string name="forth_t7">Accept rides earn</string>
    <string name="forth_t8">Login as Admin</string>
    <string name="forth_t9">Manage app users</string>
    <string name="forth_b1">Continue</string>
    <string name="fifth_title">LETS GET STARTED</string>
    <string name="fifth_t1">Choose rides that are right for you.Get started with your ride in just one tap — quick, safe, and ready when you are! 🚘✨</string>
    <string name="fifth_b1">Continue with email</string>
    <string name="fifth_t2">Or continue with</string>
    <string name="fifth_b2">Continue with Google</string>
    <string name="fifth_t3">Joining our app means you agree with our Teams of Use and Privacy Policy</string>
    <string name="fifth_b3">Back</string>
    <string name="rs">Rs</string>
    <string name="notification_title">Notifications</string>
    <string name="active_suppliers">Active\nSuppliers</string>
    <string name="pending_approval">Pending\nApproval</string>
    <string name="total_products">Total\nSuppliers</string>

    <string name="view_shop"><u>View Shop</u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>