<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="20dp">


        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="250dp"
            android:layout_height="230dp"
            android:src="@drawable/forgotpasswordsvg"
            android:scaleType="centerCrop"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            android:layout_margin="35dp"/>


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgTop"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_t1"
        android:textSize="16sp"
        android:textColor="@color/black75"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"/>

        <LinearLayout
            android:id="@+id/formContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >

            <TextView
                android:id="@+id/tvEmailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_t2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"

                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/etEmaiLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_bg"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/emailvectorfinal1"
                    android:contentDescription="@null"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/login_e1"
                    android:paddingStart="12dp"
                    android:background="@null"
                    android:textColor="@color/black44"
                    android:textSize="12sp"
                    android:fontFamily="@font/poppins"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>

            <TextView
                android:id="@+id/etEmailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginBottom="7dp"
                android:layout_marginStart="10dp"/>


        </LinearLayout>







<!--    <EditText-->
<!--        android:id="@+id/etEmail"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="@string/login_e1"-->
<!--        android:drawableStart="@drawable/emailvector"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:background="@drawable/edit_text_bg"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        android:textColor="@color/black44"-->
<!--        android:textSize="12sp"-->
<!--        android:fontFamily="@font/poppins"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginEnd="20dp"/>-->
<!--        -->




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendOtp"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/forgot_password_b1"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/btn_continue_bg"
        app:backgroundTint="@null"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/formContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btnSendOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_t3"
            android:textSize="12sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black" />

        <!-- Sign Up clickable -->
        <TextView
            android:id="@+id/tvSignInClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_t4"
            android:textSize="12sp"
            android:textColor="@color/sub_primary"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:layout_marginStart="4dp"/>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
